# MathsPhys-UQAC

./: .gitignore  README.md  identification.txt
GameEngine/: CMakeLists.txt
GameEngine/main/: CMakeLists.txt
GameEngine/main/gameEngine/: CMakeLists.txt
GameEngine/main/gameEngine/include/: blob.hpp  gameEngine.hpp  gameWorld.hpp  inputsManager.hpp  shaderSources.hpp
GameEngine/main/gameEngine/src/: blob.cpp  gameEngine.cpp  gameWorld.cpp  inputsManager.cpp  main.cpp
GameEngine/main/mathslib/: CMakeLists.txt
GameEngine/main/mathslib/include/: DragForceGenerator.hpp  ForceRegister.hpp  GravityForceGenerator.hpp  ParticleForceGenerator.hpp  vector3.hpp
GameEngine/main/mathslib/src/: DragForceGenerator.cpp  ForceRegister.cpp  GravityForceGenerator.cpp  vector3.cpp
GameEngine/main/myexe/: CMakeLists.txt
GameEngine/main/myexe/include/: GameEngine.hpp  Particle.hpp  ShaderSources.hpp
GameEngine/main/myexe/src/: GameEngine.cpp  Particle.cpp  main.cpp
GameEngine/main/mylib/: CMakeLists.txt
GameEngine/main/opengl_wrapperlib/: CMakeLists.txt
GameEngine/main/opengl_wrapperlib/include/: OpenGlWrapper.hpp  shader.hpp
GameEngine/main/opengl_wrapperlib/src/: OpenGlWrapper.cpp  Shader.cpp
GameEngine/main/physicslib/: CMakeLists.txt
GameEngine/main/physicslib/include/: anchoredSpringForceGenerator.hpp  blob.hpp  bungeeSpringForceGenerator.hpp  contactRegister.hpp  dragForceGenerator.hpp  forceRegister.hpp  gravityForceGenerator.hpp  matrix.hpp  matrixImplementation.hpp  particle.hpp  particleBuoyancyForceGenerator.hpp  particleCable.hpp  particleContact.hpp  particleContactGenerator.hpp  particleContactResolver.hpp  particleForceGenerator.hpp  particleLink.hpp  particleRod.hpp  particleSpringForceGenerator.hpp  particleStiffSpringForceGenerator.hpp  particuleForceGenerator.hpp  vector3.hpp
GameEngine/main/physicslib/include/collisions/: contactRegister.hpp  particleCable.hpp  particleContact.hpp  particleContactGenerator.hpp  particleContactResolver.hpp  particleLink.hpp  particleRod.hpp
GameEngine/main/physicslib/include/forceGenerator/: anchoredSpringForceGenerator.hpp  bungeeSpringForceGenerator.hpp  dragForceGenerator.hpp  forceRegister.hpp  gravityForceGenerator.hpp  particleBuoyancyForceGenerator.hpp  particleForceGenerator.hpp  particleSpringForceGenerator.hpp  particleStiffSpringForceGenerator.hpp
GameEngine/main/physicslib/src/: anchoredSpringForceGenerator.cpp  blob.cpp  bungeeSpringForceGenerator.cpp  contactRegister.cpp  dragForceGenerator.cpp  forceRegister.cpp  gravityForceGenerator.cpp  particle.cpp  particleBuoyancyForceGenerator.cpp  particleCable.cpp  particleContact.cpp  particleContactResolver.cpp  particleLink.cpp  particleRod.cpp  particleSpringForceGenerator.cpp  particleStiffSpringForceGenerator.cpp  vector3.cpp
GameEngine/main/physicslib/src/collisions/: contactRegister.cpp  particleCable.cpp  particleContact.cpp  particleContactResolver.cpp  particleLink.cpp  particleRod.cpp
GameEngine/main/physicslib/src/forceGenerator/: anchoredSpringForceGenerator.cpp  bungeeSpringForceGenerator.cpp  dragForceGenerator.cpp  forceRegister.cpp  gravityForceGenerator.cpp  particleBuoyancyForceGenerator.cpp  particleSpringForceGenerator.cpp  particleStiffSpringForceGenerator.cpp
GameEngine/resources/shaders/: background.vs  particle.fs  particle.vs
